--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
   "author": "Trevor Howard",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
