--- a/Client/package.json
+++ b/Client/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.1",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
@@ -16,11 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && del /f /s /q \"../Server/build\" && rmdir /s /q \"../Server/build\" && move build ../Server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3080",
   "eslintConfig": {
     "extends": [
       "react-app",
