--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.17.1",
-    "nodemailer": "^6.6.3",
-
     "node-sass": "^6.0.1",
+    "nodemailer": "^6.6.3",
+    "nodemailer-mailgun-transport": "^2.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
