--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
